# SwipeBot

./: .env.example  pyproject.toml
bot/: __main__.py
bot/api/: __init__.py  client.py  context_manager.py  enums.py  schemas.py
bot/callbacks/: __init__.py  back.py  geo.py  pagination.py
bot/database/: __init__.py  repository.py  schemas.py
bot/handlers/: __init__.py  announcements.py  auth.py  commands.py  language.py  main.py  profile.py  register.py  start.py
bot/keyboards/: __init__.py  announcement_creation.py  announcements.py  auth.py  language.py  main.py  profile.py  start.py
bot/middlewares/: __init__.py  auth.py  i18n.py
bot/states/: __init__.py  announcements.py  auth.py  language.py  main.py  start.py  user.py
bot/utilities/: dict.py  dirs.py  enums.py  pagination.py  validation.py
locales/: autopo.ooo
locales/uk/LC_MESSAGES/: messages.po
