[project]
name = "swipebot"
version = "0.1.0"
description = ""
authors = [
    {name = "ant100pshnik",email = "mypochtav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "pymongo (>=4.14.0,<5.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "babel (>=2.17.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false